--- a/productos.html
+++ b/productos.html
@@ -25,13 +25,31 @@
     <main>
         <h2>Food</h2>
         <div class="food">
-            <h3>Mandarina</h3>
-            <p>
-                <img src="Imagenes/mandarina.jpg" alt="">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt voluptates eligendi harum adipisci non eaque
-            </p>
-            
+            <div class="up">
+                <h3>Mandarina</h3>
+                <p><img src="Imagenes/mandarina.jpg" alt="">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt voluptates eligendi harum adipisci non</p>
+            </div>
+            <div class="up">
+                <h3>Cake</h3>
+                <p><img src="Imagenes/torta.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, officia nostrum corporis fugiat facilis magni, inventore dicta animi aspernatur autem iusto suscipit maxime esse</p>
+            </div>
+            <div class="up">
+                <h3>Pan</h3>
+                <p><img src="Imagenes/pan.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate dicta quibusdam hic obcaecati. Perspiciatis.</p>
+            </div>
+            <div class="up">
+                <h3>Piña</h3>
+                <p><img src="Imagenes/piña.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, perspiciatis! At totam animi alias deserunt.!</p>
+            </div>
+            <div class="up">
+                <h3>Sopa</h3>
+                <p><img src="Imagenes/sopa.jpg" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur suscipit rem quo, odit ipsa ab!</p>
+            </div>
         </div>
     </main>
+    <footer>
+        <p>👩🏻Viviana cuartas Cardona</p>
+    </footer>
 </body>
 </html>
